--- a/DockerFile
+++ b/DockerFile
@@ -9,11 +9,15 @@ COPY build.sbt .
 COPY src ./src
 
 # Exécutez sbt pour télécharger et installer les dépendances
+# hadolint ignore=DL3018
 RUN apk update && apk add --no-cache curl bash && \
     curl -Ls https://git.io/sbt > sbt && \
     chmod +x sbt && \
     ./sbt update
 
-# Exécutez les tests
-CMD ./sbt test
+# Exposez le port utilisé par votre application
+EXPOSE 8080
 
+# Exécutez l'application
+# hadolint ignore=DL3025
+CMD ["./sbt", "run"]
