--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,14 @@
-name: Docker CI
+name: Docker CI/CD
 
 on:
   pull_request:
     branches:
       - '*'
+  push:
+    branches:
+      - main
+    schedule:
+      - cron: '0 0 * * *'
 
 jobs:
   build-and-test:
@@ -28,4 +33,22 @@ jobs:
           docker exec my-container sbt test
           docker stop my-container
 
+  deploy:
+    needs: build-and-test
+    runs-on: ubuntu-latest
+    if: ${{ needs.build-and-test.result == 'success' }}
 
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Docker
+        uses: docker/setup-buildx-action@v1
+
+      - name: Log in to Docker registry
+        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Tag and push Docker image
+        run: |
+          docker tag test-sbt:latest your-docker-registry/your-repository:main
+          docker push your-docker-registry/your-repository:main
