--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,7 @@ jobs:
         uses: docker/setup-buildx-action@v1
 
       - name: Run hadolint
-        run: docker run --rm -i hadolint/hadolint < ../DockerFile
+        run: docker run --rm -i hadolint/hadolint < ../Dockerfile
 
       - name: Build Docker image
         run: docker build -t test-sbt:latest .
